--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 *.class
-
-
-# Package Files 
 *.jar
-
 *.war
-
 *.ear
-
-
 target/
-target/*
-
+*/target/*
+*/target/**
 .settings/
 .classpath
 .project
